--- a/package.json
+++ b/package.json
@@ -7,10 +7,15 @@
   "private": true,
   "dependencies": {},
   "devDependencies": {
+    "@babel/core": "^7.0.0-beta.34",
+    "@babel/preset-env": "^7.0.0-beta.34",
+    "babel-loader": "^8.0.0-beta.0",
     "css-loader": "^0.28.7",
+    "eslint": "^4.12.1",
+    "eslint-loader": "^1.9.0",
     "html-webpack-plugin": "^2.30.1",
     "style-loader": "^0.19.0",
-    "webpack": "1.14.0",
-    "webpack-dev-server": "1.16.2"
+    "webpack": "^3.9.1",
+    "webpack-dev-server": "^2.9.5"
   }
 }
