--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "eslint": "^4.12.1",
     "eslint-loader": "^1.9.0",
     "html-webpack-plugin": "^2.30.1",
+    "less": "^2.7.3",
+    "less-loader": "^4.0.5",
     "style-loader": "^0.19.0",
     "webpack": "^3.9.1",
     "webpack-dev-server": "^2.9.5"
