--- a/package.json
+++ b/package.json
@@ -7,17 +7,28 @@
   "private": true,
   "dependencies": {},
   "devDependencies": {
+    "@angular/animations": "^5.0.0",
+    "@angular/common": "^5.0.0",
+    "@angular/compiler": "^5.0.0",
+    "@angular/core": "^5.0.0",
+    "@angular/forms": "^5.0.0",
+    "@angular/http": "^5.0.0",
+    "@angular/platform-browser": "^5.0.0",
+    "@angular/platform-browser-dynamic": "^5.0.0",
+    "@angular/router": "^5.0.0",
     "@babel/core": "^7.0.0-beta.34",
     "@babel/preset-env": "^7.0.0-beta.34",
     "babel-loader": "^8.0.0-beta.0",
-    "css-loader": "^0.28.7",
     "eslint": "^4.12.1",
     "eslint-loader": "^1.9.0",
     "html-webpack-plugin": "^2.30.1",
     "less": "^2.7.3",
     "less-loader": "^4.0.5",
+    "raw-loader": "^0.5.1",
+    "rxjs": "^5.5.2",
     "style-loader": "^0.19.0",
     "webpack": "^3.9.1",
-    "webpack-dev-server": "^2.9.5"
+    "webpack-dev-server": "^2.9.5",
+    "zone.js": "^0.8.14"
   }
 }
