--- a/.eslintrc
+++ b/.eslintrc
@@ -4,7 +4,8 @@
     "sourceType": "module"
   },
   "rules": {
-    "no-console": 1
+    "no-console": 1,
+    "no-unused-vars": 1
   },
   "env": {
     "browser": true,
