--- a/package.json
+++ b/package.json
@@ -2,10 +2,11 @@
   "name": "maple-cake-gateway",
   "version": "0.0.0",
   "scripts": {
-    "start": "node scripts/start.js"
+    "start": "node scripts/start.js",
+    "test": "karma start"
   },
   "private": true,
-  "devDependencies": {
+  "dependencies": {
     "@angular/animations": "^5.0.0",
     "@angular/common": "^5.0.0",
     "@angular/compiler": "^5.0.0",
@@ -15,20 +16,29 @@
     "@angular/platform-browser": "^5.0.0",
     "@angular/platform-browser-dynamic": "^5.0.0",
     "@angular/router": "^5.0.0",
-    "@babel/core": "^7.0.0-beta.34",
-    "@babel/preset-env": "^7.0.0-beta.34",
-    "babel-loader": "^8.0.0-beta.0",
+    "rxjs": "^5.5.2",
+    "truffle-contract": "^3.0.1",
+    "zone.js": "^0.8.14"
+  },
+  "devDependencies": {
+    "babel-core": "^6.26.0",
+    "babel-loader": "^7.1.2",
+    "babel-preset-env": "1.6.1",
     "eslint": "^4.12.1",
     "eslint-loader": "^1.9.0",
     "html-webpack-plugin": "^2.30.1",
+    "jasmine-core": "^2.8.0",
+    "jasmine-spec-reporter": "^4.2.1",
+    "karma": "^1.7.1",
+    "karma-cli": "^1.0.1",
+    "karma-jasmine": "^1.1.1",
+    "karma-jasmine-html-reporter": "^0.2.2",
+    "karma-webpack": "^2.0.9",
     "less": "^2.7.3",
     "less-loader": "^4.0.5",
     "raw-loader": "^0.5.1",
-    "rxjs": "^5.5.2",
     "style-loader": "^0.19.0",
-    "truffle-contract": "^3.0.1",
     "webpack": "^3.9.1",
-    "webpack-dev-server": "^2.9.5",
-    "zone.js": "^0.8.14"
+    "webpack-dev-server": "^2.9.5"
   }
 }
