--- a/.eslintrc
+++ b/.eslintrc
@@ -5,7 +5,8 @@
   },
   "rules": {
     "no-console": 1,
-    "no-unused-vars": 1
+    "no-unused-vars": 1,
+    "semi": 1
   },
   "env": {
     "browser": true,
