--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "maple-cake-gateway",
   "version": "0.0.0",
   "scripts": {
-    "start": "node scripts/start.js",
+    "start": "node scripts/start-dev-server.js",
     "test": "karma start"
   },
   "private": true,
